Finished dynamic connectivity

--- a/Coursera/Princeton/Algorithms-Part-1/Week 1/Dynamic Connectivity.ipynb
+++ b/Coursera/Princeton/Algorithms-Part-1/Week 1/Dynamic Connectivity.ipynb
@@ -981,11 +981,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Questions\n",
     "\n",
@@ -1082,12 +1077,177 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Interview Questions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. **Social network connectivity**. Given a social network containing $n$ members and a log file containing $m$ timestamps at which times pairs of members formed friendships, design an algorithm to determine the earliest time at which all members are connected (*i.e.*, every member is a friend of a friend of a friend ... of a friend). Assume that the log file is sorted by timestamp and that friendship is an equivalence relation. The running time of your algorithm should be $m \\log n$ or better and use extra space proportional to $n$.<br>\n",
+    "\n",
+    "**Answer**: I think this could be developed by implementing the weighted quick-union find algorithm, where the timestamp is sorted in ascending order. First, we check the number of members in the log. Then, for each pair of members in the log, we perform `union()` and count how many members are connected. In case the number of connected members is equal to n-1, we stop adding new members and check the last timestamp.\n",
+    "\n",
+    "Using the the algorithm for the list below, marked as `<member> <member> <timestamp>` as:\n",
+    "\n",
+    "```\n",
+    "0 1 2019-03-20 00:00:00\n",
+    "0 2 2019-03-20 00:01:00\n",
+    "0 3 2019-03-20 00:02:00\n",
+    "2 4 2019-03-20 00:03:00\n",
+    "2 5 2019-03-20 00:04:00\n",
+    "3 6 2019-03-20 00:05:00\n",
+    "3 7 2019-03-20 00:06:00\n",
+    "6 8 2019-03-20 00:07:00\n",
+    "6 9 2019-03-20 00:08:00\n",
+    "3 5 2019-03-20 00:09:00\n",
+    "```\n",
+    "\n",
+    "We have the algorithm:\n",
+    "\n",
+    "```python\n",
+    "# Initiate our list with 10 members \n",
+    "m = 10\n",
+    "WQUFind = WeightedQuickUnionFind(m)\n",
+    "for line in log:\n",
+    "    member1, member2, timestamp = line\n",
+    "    WQUFind.union(member1, member2)\n",
+    "    counter += 1\n",
+    "    if counter == m-1:\n",
+    "        break\n",
+    "print('Minimum timestamp with all members connected is {}'.format(timestamp))\n",
+    "``` \n",
+    "\n",
+    "Instead of using a counter, we can check in the internal structure of `WeightedQuickUnionFind` if all elements are connected to the same root."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "2. **Union-find with specific canonical element**. Add a method `find()` to the union-find data type so that `find(i)` returns the largest element in the connected component containing $i$. The operations, `union()`, `connected()`, and `find()` should all take logarithmic time or better. For example, if one of the connected components is $\\{1, 2, 6, 9\\}$, then the `find()` method should return $9$ for each of the four elements in the connected components.\n",
+    "\n",
+    "**Answer**: In this case, the union-find algorithm could have another list that stores the largest value when performing the `union()` operation. This largest value is related to the root of each tree. Thus, when computing the `find()` of a set, we have to only check the value associated with the root. \n",
+    "\n",
+    "Thus, our algorithm would be something like:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "&#9744;"
+    "class WeightedQuickUnion_Find(object):\n",
+    "    def __init__(self, N): \n",
+    "        # initialize union-find data structure with N objects (0 to N-1)\n",
+    "        self.id = [i for i in range(N)]\n",
+    "        self.sz = [1]*N\n",
+    "        self.large = [i for i in range(N)]\n",
+    "        \n",
+    "    def union(self, p, q):\n",
+    "        # add connection between p and q\n",
+    "        root_p = self.root(p)\n",
+    "        root_q = self.root(q)\n",
+    "        if root_p == root_q: \n",
+    "            return\n",
+    "        \n",
+    "        large_p = self.large[root_p]\n",
+    "        large_q = self.large[root_q]\n",
+    "        if self.sz[root_p] < self.sz[root_q]:\n",
+    "            self.id[root_p] = root_q\n",
+    "            self.sz[root_q] += self.sz[root_p]\n",
+    "            if large_p > large_q:\n",
+    "                self.large[large_q] = large_p\n",
+    "        else:\n",
+    "            self.id[root_q] = root_p\n",
+    "            self.sz[root_p] += self.sz[root_q]\n",
+    "            if large_q > large_p:\n",
+    "                self.large[large_p] = large_q\n",
+    "                \n",
+    "    def connected(self, p, q):\n",
+    "        # are p and q in the same component?\n",
+    "        # return True or False\n",
+    "        if self.root(p) == self.root(q):\n",
+    "            return True\n",
+    "        return False\n",
+    "    \n",
+    "    def root(self, p):\n",
+    "        # get the root of the tree\n",
+    "        while p != self.id[p]:\n",
+    "            p = self.id[p]\n",
+    "        return p\n",
+    "\n",
+    "    def find(self, p):\n",
+    "        # return the largest value\n",
+    "        root = self.root(p)\n",
+    "        return self.large[root]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial state:\n",
+      "Add a new pairs: (4, 3)\n",
+      "Largest: 4\n",
+      "Add a new pair: (3, 8)\n",
+      "Largest: 8\n",
+      "Add a new pair: (6, 5)\n",
+      "Largest: 6\n",
+      "Add a new pair: (9, 5)\n",
+      "Largest: 9\n",
+      "Add a new pair: (7, 9)\n",
+      "Largest: 9\n",
+      "Merge both sets adding: (5, 3)\n",
+      "Largest: 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "wqfind = WeightedQuickUnion_Find(10)\n",
+    "print(\"Initial state:\")\n",
+    "print(\"Add a new pairs: (4, 3)\")\n",
+    "wqfind.union(4, 3)\n",
+    "print(\"Largest: %d\" % wqfind.find(3))\n",
+    "print(\"Add a new pair: (3, 8)\")\n",
+    "wqfind.union(3, 8)\n",
+    "print(\"Largest: %d\" % wqfind.find(3))\n",
+    "print(\"Add a new pair: (6, 5)\")\n",
+    "wqfind.union(6, 5)\n",
+    "print(\"Largest: %d\" % wqfind.find(5))\n",
+    "print(\"Add a new pair: (9, 5)\")\n",
+    "wqfind.union(9, 5)\n",
+    "print(\"Largest: %d\" % wqfind.find(5))\n",
+    "print(\"Add a new pair: (7, 9)\")\n",
+    "wqfind.union(7, 9)\n",
+    "print(\"Largest: %d\" % wqfind.find(5))\n",
+    "print(\"Merge both sets adding: (5, 3)\")\n",
+    "wqfind.union(5, 3)\n",
+    "print(\"Largest: %d\" % wqfind.find(3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. **Successor with delete**. Given a set of nn integers $S = \\{ 0, 1, ... , n-1 \\}$ and a sequence of requests of the following form:\n",
+    "\n",
+    "- Remove $x$ from $S$<br>\n",
+    "- Find the successor of $x$: the smallest $y$ in $S$ such that $y \\ge x$.<br>\n",
+    "\n",
+    "design a data type so that all operations (except construction) take logarithmic time or better in the worst case.\n",
+    "\n",
+    "**Answer**: In this question, we can use the previous algorithm that finds the largest value of our tree. In case of removing an element, we perform an `union()` of the element being removed and the next element. Our list containing the largest element keeps track of the next successor."
    ]
   }
  ],
