--- a/Coursera/Princeton/Algorithms-Part-1/Week 1/2. Analysis of Algorithms.ipynb
+++ b/Coursera/Princeton/Algorithms-Part-1/Week 1/2. Analysis of Algorithms.ipynb
@@ -317,7 +317,7 @@
     "|  1000     | 24.5575349331    |  8.98 |    3.16    |\n",
     "|  2000     | 236.33496213     |  9.62 |    3.27    |\n",
     "\n",
-    "As we can see, the slope of the line is $b \\approx 3$. This means that the order of growth of running time is $N^3$. In order to find $a$, we can run for a sufficient large value of $N and calculate its value as:\n",
+    "As we can see, the slope of the line is $b \\approx 3$. This means that the order of growth of running time is $N^3$. In order to find $a$, we can run for a sufficient large value of $N$ and calculate its value as:\n",
     "\n",
     "$T(N) = a \\times N^b$<br>\n",
     "$24.5575349331 = a \\times 1000^{3}$<br>\n",
@@ -547,15 +547,15 @@
     "\n",
     "For understanding memory consumption, we first review some basic concepts. A bit is composed of 0 or 1, while a byte contains 8 bits. A Megabyte (MB) contains $2^{20}$ bytes while a Gigabyte (GB) contains $2^{30}$ bytes. The typical memory usage (for Java language) for primitive types and arrays is presented in the table below:\n",
     "\n",
-    "| Type       | Bytes      | $\\hspace{30pt}$ | Type       |  Bytes     |\n",
-    "| ---------- | ---------- |---------------- | ---------- | ---------- |\n",
-    "| boolean    | 1          | $\\hspace{30pt}$ | char[]     | 2N + 24    |\n",
-    "| byte       | 1          | $\\hspace{30pt}$ | int[]      | 4N + 24    |\n",
-    "| char       | 2          | $\\hspace{30pt}$ | double[]   | 8N + 24    |\n",
-    "| int        | 4          | $\\hspace{30pt}$ | char[][]   | $\\sin 2MN$ |\n",
-    "| float      | 4          | $\\hspace{30pt}$ | int[][]    | $\\sin 4MN$ |\n",
-    "| long       | 8          | $\\hspace{30pt}$ | double[][] | $\\sin 8MN$ |\n",
-    "| double     | 8          | $\\hspace{30pt}$ |            |            |\n",
+    "| Type       | Bytes      | $\\hspace{30pt}$ | Type         |  Bytes     |\n",
+    "| ---------- | ---------- |---------------- | ------------ | ---------- |\n",
+    "| boolean    | 1          | $\\hspace{30pt}$ | char[ ]      | 2N + 24    |\n",
+    "| byte       | 1          | $\\hspace{30pt}$ | int[ ]       | 4N + 24    |\n",
+    "| char       | 2          | $\\hspace{30pt}$ | double[ ]    | 8N + 24    |\n",
+    "| int        | 4          | $\\hspace{30pt}$ | char[ ][ ]   | $\\sim 2MN$ |\n",
+    "| float      | 4          | $\\hspace{30pt}$ | int[ ][ ]    | $\\sim 4MN$ |\n",
+    "| long       | 8          | $\\hspace{30pt}$ | double[ ][ ] | $\\sim 8MN$ |\n",
+    "| double     | 8          | $\\hspace{30pt}$ |              |            |\n",
     "\n",
     "For objects, we have an overhead (usually 16 bytes), a reference (8 bytes) and padding (a multiple of 8 bytes). For example, a `Date` object declared as:\n",
     "\n",
@@ -815,12 +815,12 @@
    "source": [
     "6. How much memory (in bytes) does a `WeightedQuickUnionUF` object use as a function of the number of elements $n$?<br>\n",
     "\n",
-    "&#9744; $\\sin n$<br>\n",
-    "&#9744; $\\sin 2n$<br>\n",
-    "&#9744; $\\sin 4n$<br>\n",
-    "&#9745; $\\sin 8n$\n",
+    "&#9744; $\\sim n$<br>\n",
+    "&#9744; $\\sim 2n$<br>\n",
+    "&#9744; $\\sim 4n$<br>\n",
+    "&#9745; $\\sim 8n$\n",
     "\n",
-    "**Solution**: Considering that each array of integers consume `4n+24` of memory and that we have 2 arrays with size `n`, the WeightedQuickUnionUF uses a total of $\\sin 8n$ of memory. \n",
+    "**Solution**: Considering that each array of integers consume `4n+24` of memory and that we have 2 arrays with size `n`, the WeightedQuickUnionUF uses a total of $\\sim 8n$ of memory. \n",
     "\n",
     "```python\n",
     "class WeightedQuickUnionUF(object):\n",
@@ -902,18 +902,19 @@
    "source": [
     "2. **Search in a bitonic array**. An array is bitonic if it is comprised of an increasing sequence of integers followed immediately by a decreasing sequence of integers. Write a program that, given a bitonic array of $n$ distinct integer values, determines whether a given integer is in the array.\n",
     "\n",
-    "a. *Standard version*: Use $\\sin 3 \\lg n$ compares in the worst case.<br>\n",
-    "b. *Signing bonus*: Use $\\sin 2 \\lg n$ compares in the worst case (and prove that no algorithm can guarantee to perform fewer than $\\sin 2 \\lg n$ compares in the worst case).\n",
+    "a. *Standard version*: Use $\\sim 3 \\lg n$ compares in the worst case.<br>\n",
+    "b. *Signing bonus*: Use $\\sim 2 \\lg n$ compares in the worst case (and prove that no algorithm can guarantee to perform fewer than $\\sim 2 \\lg n$ compares in the worst case).\n",
     "\n",
-    "**Answer**: In the standard version, first we find the two vectors representing the bitonic array, which would consume $\\sin 1 \\lg N$. Next, we perform binary search in each array to find if the integer is in it.  For the signing bonus, we only perform the binary search in the array verifying when to invert the order of increasing/decreasing."
+    "**Answer**: In the standard version, first, we find the two vectors representing the bitonic array, which would consume $\\sim 1 \\lg N$. Next, we perform a binary search in each array to find if the integer is in it. For the signing bonus, we only perform the binary search in the array verifying when it inverts the order of increasing/decreasing."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Implementation of the **Search in a bitonic array** question.\n",
     "class Bitonic(object):\n",
     "    def __init__(self, vec):\n",
     "        self.vec = vec\n",
@@ -931,12 +932,8 @@
     "            return self.vec[:mid], self.vec[mid:]\n",
     "        return vinc, vdec\n",
     "    \n",
-    "    def binary_search(self, target):\n",
-    "        lo = 0\n",
-    "        hi = len(self.vec)-1\n",
-    "        inc = False\n",
-    "        if self.vec[lo] < self.vec[hi]: \n",
-    "            inc = True\n",
+    "    \n",
+    "    def search(self, lo, hi, target, inc):\n",
     "        while lo <= hi:\n",
     "            mid = lo + (hi - lo)/2\n",
     "            #print lo, hi, mid, target, self.vec[mid]\n",
@@ -948,6 +945,41 @@
     "            elif target < self.vec[mid]:\n",
     "                if inc: hi = mid-1\n",
     "                else: lo = mid+1\n",
+    "        return False\n",
+    "        \n",
+    "    \n",
+    "    def binary_search(self, target):\n",
+    "        lo = 0\n",
+    "        hi = len(self.vec)-1\n",
+    "        inc = False\n",
+    "        if self.vec[lo] < self.vec[hi]: \n",
+    "            inc = True\n",
+    "        return self.search(lo, hi, target, inc)\n",
+    "    \n",
+    "\n",
+    "    def binary_bitonic(self, target):\n",
+    "        lo = 0\n",
+    "        hi = len(self.vec)-1\n",
+    "        himax = len(self.vec)-1\n",
+    "        \n",
+    "        while lo <= hi:\n",
+    "            mid = lo + (hi - lo)/2\n",
+    "            #print lo, hi, mid, vec[mid]\n",
+    "            if self.vec[mid] == target:\n",
+    "                return True\n",
+    "            if self.vec[mid+1] > self.vec[mid]:\n",
+    "                if self.vec[mid] > target:\n",
+    "                    hi = mid-1\n",
+    "                    return self.search(lo, hi, target, True)\n",
+    "                else:\n",
+    "                    lo = mid+1\n",
+    "            else:\n",
+    "                if self.vec[mid] > target and self.vec[himax] <= target:\n",
+    "                    lo = mid+1\n",
+    "                    return self.search(lo, hi, target, False)\n",
+    "                else:\n",
+    "                    hi = mid-1\n",
+    "                    \n",
     "        return False"
    ]
   },
@@ -1033,63 +1065,66 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 233,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The target 2 was found? - True\n",
+      "The target 11 was found? - True\n",
+      "The target 4 was found? - False\n",
+      "\n",
+      "The target 2 was found? - True\n",
+      "The target 11 was found? - True\n",
+      "The target 4 was found? - False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test binary on bitonic search\n",
+    "v1 = [1,2,3,15,14,13,12,11,10]\n",
+    "v2 = [1,2,3,5,6,7,8,9,13,12,11]\n",
+    "target1 = 2\n",
+    "target2 = 11\n",
+    "target3 = 4\n",
+    "\n",
+    "def test_search(v, target):\n",
+    "    vbit = Bitonic(v)\n",
+    "    found = vbit.binary_bitonic(target)\n",
+    "    print 'The target {} was found? - {}'.format(target, found)\n",
+    "    \n",
+    "test_search(v1, target1)\n",
+    "test_search(v1, target2)\n",
+    "test_search(v1, target3)\n",
+    "print\n",
+    "test_search(v2, target1)\n",
+    "test_search(v2, target2)\n",
+    "test_search(v2, target3)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "3. **Egg drop**. Suppose that you have an $n$-story building (with floors 1 through $n$) and plenty of eggs. An egg breaks if it is dropped from floor $T$ or higher and does not break otherwise. Your goal is to devise a strategy to determine the value of $T$ given the following limitations on the number of eggs and tosses:\n",
     "\n",
     "   - Version 0: 1 egg, $\\le T$ tosses.\n",
-    "   - Version 1: $\\sin 1 \\lg n$ eggs and $\\sin 1 \\lg n$ tosses.\n",
-    "   - Version 2: $\\sin \\lg T$ eggs and $\\sin 2 \\lg T$ tosses.\n",
+    "   - Version 1: $ \\sin 1 \\lg n$ eggs and $\\sin 1 \\lg n$ tosses.\n",
+    "   - Version 2: $ \\sin \\lg T$ eggs and $\\sin 2 \\lg T$ tosses.\n",
     "   - Version 3: $2$ eggs and $\\sin 2 \\sqrt{n}$ tosses.\n",
-    "   - Version 4: $2$ eggs and $\\le c \\sqrt{T}$ tosses for some fixed constant $c$."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 166,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 166,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def recursive_search(vec, lo, hi, target):\n",
-    "    while lo < hi:\n",
-    "        mid = lo + (hi - lo)/2\n",
-    "        if target == vec[mid]:\n",
-    "            return True\n",
-    "        elif target > vec[mid]:\n",
-    "            lo = mid+1\n",
-    "        elif target < vec[mid]:\n",
-    "            hi = mid-1\n",
-    "    return False\n",
+    "   - Version 4: $2$ eggs and $\\le c \\sqrt{T}$ tosses for some fixed constant $c$.\n",
+    "   \n",
+    "**Answer**: Below we have the explanation for each version of the problem:\n",
     "\n",
-    "a = [1,2,4,5,6,7,8]\n",
-    "recursive_search(a, 0, 5, 3)"
+    "   - Version 0: we have can perform a sequential search, trying from floor 1 to T when the egg breaks. \n",
+    "   - Version 1: we can perform a binary search as our number of eggs is equal to the number of tosses ($1 \\lg T$). We toss the egg from $\\frac{n}{2}$ floor, if it breaks, we go to the $\\frac{n}{4}$ floor and toss it, and so on. \n",
+    "   - Version 2: we can increase floors by $2^f$ up to a number bigger than T (when the egg breaks). This tells us that T must be between $2^f$ and $2^{f-1}$. Next, we can perform a binary search on the resulting floors, which would lead to $+1 \\lg T$ tosses. \n",
+    "   - Version 3: we can increase the floors by $\\sqrt{n}$. When the egg breaks from floor $f$, we know that the value of $T$ is between $f$ and $f-1$. Thus, we can increase each floor from $f-1$ to $f$ and verify $T$ when the first egg breaks. \n",
+    "   - Version 4: we increase the number of floors as: 1, 1+2, 1+2+3, 1+2+3+4, ..., 1+2+3+4+...+$f$. We stop when the first egg breaks. Thus, we know that the value of $T$ is between 1+2+3+4+...+f and 1+2+3+4+...+f-1. In this interval, we have more $f$ floors to test.  "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
