Added generic types

--- a/Coursera/Princeton/Algorithms-Part-1/Week 2/1. Stacks and Queues.ipynb
+++ b/Coursera/Princeton/Algorithms-Part-1/Week 2/1. Stacks and Queues.ipynb
@@ -10,6 +10,8 @@
     "\n",
     "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/Princeton/Algorithms-Part-1/Week%202/images/datatypes.svg\" width=\"90%\" align=\"center\"/>\n",
     "\n",
+    "## Stack\n",
+    "\n",
     "As the image illustrates, in the Stack we have two operation to insert and remove an item, called *push* and *pop*. Stacks examine the item that was most recently added. It is called LIFO (Last In, First Out). On the other hand, a Queue has the operation called *enqueue* to insert an item and *dequeue* to remove an item. It examines the item that was least recently added, which is called FIFO (First In, First Out).\n",
     "\n",
     "For implementing the Stack we have three methods called: `push()`, `pop()` and `is_empty()`. In push, we insert a new string onto the stack, in pop, we remove and return the string most recently added, and is_empty, we verify if the stack is empty. We still can have a method called `size()` that returns the number of strings on the stack. \n",
@@ -291,6 +293,281 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Queues\n",
+    "\n",
+    "Unkike Stacks, for implementing the Queue we have three methods called: enqueue(), dequeue() and is_empty(). In enqueue, we insert a new string onto the queue, in dequeue, we remove and return the string least recently added, and is_empty, we verify if the queue is empty. We still can have a method called size() that returns the number of strings on the queue. \n",
+    "\n",
+    "In a first example, we consider that any input is enqueued to the queue until a dash is received. When the input corresponds to a dash, we dequeue the element least recently added to the queue. The image bellow illustrates the process of adding and removing elements of the queue.\n",
+    "\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/Princeton/Algorithms-Part-1/Week%202/images/queue_linkedlist.svg\" width=\"50%\" align=\"center\"/>\n",
+    "\n",
+    "Thus, we implement the queue using a linked-list representation. As the stack implementation, here we have a node with the *item* containing the string and with a reference to the *next* node."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Added: to\n",
+      "Added: be\n",
+      "Added: or\n",
+      "Added: not\n",
+      "Removed: to\n",
+      "Removed: be\n",
+      "Added: to\n",
+      "Added: be\n",
+      "\n",
+      "Elements: or\n",
+      "Elements: not\n",
+      "Elements: to\n",
+      "Elements: be\n"
+     ]
+    }
+   ],
+   "source": [
+    "class LinkedQueueOfStrings(object):\n",
+    "    def __init__(self):\n",
+    "        self.first = None\n",
+    "        self.last = None\n",
+    "    \n",
+    "    class Node:\n",
+    "        def __init__(self):\n",
+    "            self.item = ''\n",
+    "            self.next = None\n",
+    "\n",
+    "    def is_empty(self):\n",
+    "        return self.first == None\n",
+    "\n",
+    "    def enqueue(self, item):\n",
+    "        oldlast = self.last\n",
+    "        self.last = self.Node()\n",
+    "        self.last.item = item\n",
+    "        self.last.next = None\n",
+    "        if self.is_empty():\n",
+    "            self.first = self.last\n",
+    "        else:\n",
+    "            oldlast.next = self.last\n",
+    "\n",
+    "    def dequeue(self):\n",
+    "        item = self.first.item\n",
+    "        self.first = self.first.next\n",
+    "        if self.is_empty():\n",
+    "            self.last = None\n",
+    "        return item\n",
+    "    \n",
+    "sentence = ['to', 'be', 'or', 'not', '-', '-', 'to', 'be']\n",
+    "\n",
+    "queue = LinkedQueueOfStrings()\n",
+    "for w in sentence:\n",
+    "    if w == '-' and not queue.is_empty():\n",
+    "        w = queue.dequeue()\n",
+    "        print('Removed: {}'.format(w))\n",
+    "    else:\n",
+    "        queue.enqueue(w)\n",
+    "        print('Added: {}'.format(w))\n",
+    "\n",
+    "print('')\n",
+    "while not queue.is_empty():\n",
+    "    print('Elements: {}'.format(queue.dequeue()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Array Implementation\n",
+    "\n",
+    "As occurred in stack, here we can use an array implementation of a queue. We use an array `s[ ]` to store $N$ items on the queue. In this implementation, `enqueue()` adds a new item at `s[tail++]` increasing the `tail` of our queue and `dequeue()` removes an item from `s[head++]`. This configuration generates arrays with a certain capacity such as the one below with `capacity=10`. Consider in the example below that first, we add the elements *to*, *be*, *or*, *not*. Then, we remove (dequeue) 2 elements (*to*) and (*be*), and finally add two more elements *to* and *be*. As we add and remove elements of the queue, we can see the `head` and the `tail` increasing. When we have such structure, we have to move all elements to the `index=0` when our `tail` overflows and our `head` is greater than zero.\n",
+    "\n",
+    "| 0      | 1      | 2      | 3      | 4      | 5      | 6      | 7      | 8      | 9      | $\\ $ | Head | Tail |\n",
+    "|--------|--------|--------|--------|--------|--------|--------|--------|--------|--------|------|------|------|\n",
+    "| to     | *null* | *null* | *null* | *null* | *null* | *null* | *null* | *null* | *null* | $\\ $ |  0   |  1   |\n",
+    "| to     | be     | *null* | *null* | *null* | *null* | *null* | *null* | *null* | *null* | $\\ $ |  0   |  2   |\n",
+    "| to     | be     | or     | *null* | *null* | *null* | *null* | *null* | *null* | *null* | $\\ $ |  0   |  3   |\n",
+    "| to     | be     | or     | not    | *null* | *null* | *null* | *null* | *null* | *null* | $\\ $ |  0   |  4   |\n",
+    "| *null* | be     | or     | not    | *null* | *null* | *null* | *null* | *null* | *null* | $\\ $ |  1   |  4   |\n",
+    "| *null* | *null* | or     | not    | *null* | *null* | *null* | *null* | *null* | *null* | $\\ $ |  2   |  4   |\n",
+    "| *null* | *null* | or     | not    | to     | *null* | *null* | *null* | *null* | *null* | $\\ $ |  2   |  5   |\n",
+    "| *null* | *null* | or     | not    | to     | be     | *null* | *null* | *null* | *null* | $\\ $ |  2   |  6   |\n",
+    "\n",
+    "This kind of implementation has the drawback of occuring queue overflows when $N$ exceeds the capacity in some languages. An implementation using arrays is shown below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial array: ['None', 'None', 'None', 'None', 'None']\n",
+      "\n",
+      "Input\tOutput\tArray content\n",
+      "-----\t------\t-------------\n",
+      "to\t+\t['to', 'None', 'None', 'None', 'None']\n",
+      "be\t+\t['to', 'be', 'None', 'None', 'None']\n",
+      "or\t+\t['to', 'be', 'or', 'None', 'None']\n",
+      "not\t+\t['to', 'be', 'or', 'not', 'None']\n",
+      "-\tto\t['None', 'be', 'or', 'not', 'None']\n",
+      "-\tbe\t['None', 'None', 'or', 'not', 'None']\n",
+      "to\t+\t['None', 'None', 'or', 'not', 'to']\n",
+      "be\t+\t['or', 'not', 'to', 'be', 'None']\n",
+      "\n",
+      "Final array: ['or', 'not', 'to', 'be', 'None']\n"
+     ]
+    }
+   ],
+   "source": [
+    "class FixedCapacityQueueOfStrings(object):\n",
+    "    def __init__(self, capacity):\n",
+    "        self.s = ['None']*capacity\n",
+    "        self.capacity = capacity\n",
+    "        self.head = 0\n",
+    "        self.tail = 0\n",
+    "\n",
+    "    def is_empty(self):\n",
+    "        return self.head == self.tail\n",
+    "    \n",
+    "    def move_elements(self):\n",
+    "        for i, ie in enumerate(range(self.head, self.tail)):\n",
+    "            self.s[i] = self.s[ie]\n",
+    "            self.s[ie] = 'None'\n",
+    "        self.head = 0\n",
+    "        self.tail = i+1\n",
+    "\n",
+    "    def enqueue(self, item):\n",
+    "        if self.tail == self.capacity: \n",
+    "            if self.head == 0:\n",
+    "                raise Exception('ERROR: Cannot add element [Overflow]')\n",
+    "            else:\n",
+    "                self.move_elements()\n",
+    "        self.s[self.tail] = item\n",
+    "        self.tail += 1\n",
+    "\n",
+    "    def dequeue(self):\n",
+    "        if self.is_empty():\n",
+    "            raise Exception('ERROR: Cannot remove element [Underflow]')\n",
+    "        item = self.s[self.head]\n",
+    "        self.s[self.head] = 'None'\n",
+    "        self.head += 1\n",
+    "        return item\n",
+    "\n",
+    "    \n",
+    "sentence = ['to', 'be', 'or', 'not', '-', '-', 'to', 'be']\n",
+    "queue = FixedCapacityQueueOfStrings(5)\n",
+    "print('Initial array: {}'.format(queue.s))\n",
+    "print('')\n",
+    "print('Input\\tOutput\\tArray content')\n",
+    "print('-----\\t------\\t-------------')\n",
+    "for w in sentence:\n",
+    "    if w == '-' and not queue.is_empty():\n",
+    "        w = queue.dequeue()\n",
+    "        print('-\\t{}\\t{}'.format(w, queue.s))\n",
+    "    else:\n",
+    "        queue.enqueue(w)\n",
+    "        print('{}\\t+\\t{}'.format(w, queue.s))\n",
+    "print('')\n",
+    "print('Final array: {}'.format(queue.s))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generics in Java\n",
+    "\n",
+    "When programming in Java, we can create stacks or queues for different types of objects. Thus, we can create a stack named `StackOfStrings`, another named `StackOfInts`, another `StackOfURLs` and so on. However we can see that the unique diference between these stacks is the type of object they are using. Instead of creating a stack for each type of object, we can create a generic stack and only casting or declare its type for different types of objects. \n",
+    "\n",
+    "For example, we can use casting to the object that we are retrieving from a list. The problem is that in case of adding a different type in the list, we can discover the error only in runtime. The example below shows the casting for object.\n",
+    "\n",
+    "```java\n",
+    "StackOfObjects s = new StackOfObjects();\n",
+    "Apple a = new Apple();\n",
+    "Orange b = new Orange();\n",
+    "s.push(a);\n",
+    "s.push(b);\n",
+    "a = (Apple) (s.pop()); //Run-time error\n",
+    "```\n",
+    "\n",
+    "When declaring different types of objects explicitly, as in the example below, we can identify error in compile-time instead of run-time. To do so in Java, we declare the type parameters as follows:\n",
+    "\n",
+    "```java\n",
+    "Stack<Apple> s = new Stack<Apple>();\n",
+    "Apple a = new Apple();\n",
+    "Orange b = new Orange();\n",
+    "s.push(a);\n",
+    "s.push(b); //Compile-time error\n",
+    "a = s.pop();\n",
+    "```\n",
+    "\n",
+    "Thus, our linked-list implementation would become in Java:\n",
+    "\n",
+    "```java\n",
+    "public class Stack<Item> {       //<Item> is a generic type name\n",
+    "    private Node first = null;\n",
+    "\n",
+    "    private class Node {\n",
+    "        Item item;               //generic type name\n",
+    "        Node next;\n",
+    "    }\n",
+    "\n",
+    "    public boolean isEmpty(){\n",
+    "        return first == null;\n",
+    "    }\n",
+    "\n",
+    "    public void push(Item item){ //genreric type name\n",
+    "        Node oldfirst = first;\n",
+    "        first = new Node();\n",
+    "        first.item = item;\n",
+    "        first.next = oldfirst;\n",
+    "    }\n",
+    "\n",
+    "    public Item pop(){          //generic type name\n",
+    "        Item item = first.item; //generic type name\n",
+    "        first = first.next;\n",
+    "        return item;\n",
+    "    }\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "It is important to note that when implementing lists of objects, we cannot use the declaration as:\n",
+    "\n",
+    "```java\n",
+    "private Item[] s;\n",
+    "...\n",
+    "s = new Item[capacity];\n",
+    "```\n",
+    "\n",
+    "Since it would lead to a compile-time error. Instead, we have to use casting to declare the type of object as:\n",
+    "\n",
+    "```java\n",
+    "private Item[] s;\n",
+    "...\n",
+    "s = (Item[]) new Object[capacity];\n",
+    "```\n",
+    "\n",
+    "Unlike non-primitive types, primitive types have a wrapper that automatically assign the type for the variable without needing to do casting. For example, consider the code below:\n",
+    "\n",
+    "```java\n",
+    "Stack<Integer> s = new Stack<Integer>();\n",
+    "s.push(17);       // equals to: s.push(Integer.valueOf(17));\n",
+    "int a = s.pop();  // equals to: int a = s.pop().intValue()\n",
+    "```\n",
+    "\n",
+    "It is important to say here that we use Java to illustrate generic types since Python has *Duck typing*. *i.e.*, \"If it walks like a duck and it quacks like a duck, then it must be a duck\". Thus, it can \"discover\" the type of the object automatically without needing the casting or declaring the type explicitly."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -350,10 +627,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "4. Suppose that you implement a queue using a null-terminated singly-linked list, maintaining a reference to the item least recently added (the front of the list) but not maintaining a reference to the item most recently added (the end of the list). What are the worst-case running times for enqueue and dequeue?<br>\n",
+    "\n",
+    "&#9744; constant time for both enqueue and dequeue<br>\n",
+    "&#9744; constant time for enqueue and linear time for dequeue<br>\n",
+    "&#9745; linear time for enqueue and constant time for dequeue<br>\n",
+    "&#9744; linear time for both enqueue and dequeue"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. Which of the following statements is a type safe way to declare and initialize a `Stack` of integers in Java?<br>\n",
+    "\n",
+    "&#9744; `Stack<int> stack = new Stack<int>();`<br>\n",
+    "&#9744; `Stack<Integer> stack = new Stack();`<br>\n",
+    "&#9744; `Stack stack = new Stack<Integer>();`<br>\n",
+    "&#9745; `Stack<Integer> stack = new Stack<Integer>();`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "&#9744; "
    ]
